@@ -309,3 +309,4 @@ ERROR:  invalid KML representation
 #4055a|4326
 #4055b|4326
 #4089|LINESTRING Z (1 1 1,3 3 1)
+#4081|f|t
