@@ -15,6 +15,7 @@ PostGIS 2.4.5
   - #4090, PG 11 support (Paul Ramsey, Raúl Marín)
   - #3997, fix bug in lwgeom_median and avoid division by zero (Raúl Marín)
   - #4093, Inconsistent results from qsort callback (yugr)
+  - #4081, Geography DWithin() issues for certain cases (Paul Ramsey)
   - #4105, Parallel build of tarball (Bas Couwenberg)
 
 
